# prompt-observatory

./: README.md  pyproject.toml
.github/workflows/: ci.yml
observatory/: app.py
observatory/core/: cost.py  hallucination.py  stream.py
observatory/providers/: anthropic.py  openai.py
observatory/ui/: export.py
tests/: test_cost.py  test_export.py  test_hallucination.py  test_stream.py
